--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ pandas = "*"
 google-api-python-client = "*"
 google-auth-httplib2 = "*"
 google-auth-oauthlib = "*"
+alpha-vantage = "*"
 
 [requires]
 python_version = "3.8"
